methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:12: error: not found: value fdessinePartie
    fdessinePartie();
    ^